CICO-41398 updates language tags for Staff Review Passport image/details, adds rotate for image, fixes demo mode / jumper to scan ids

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -2000,6 +2000,15 @@
     position: relative;
     left: 20%;
     margin-bottom:1%;
+
+    display: block;
+    transition: 300ms ease;
+    -webkit-transform: translateZ(0);
+    border-radius: .5em;
+    &.rotated {
+        margin-top: 9.5%;
+        margin-bottom: 8.5%;
+    }
 }
 
 .bold-label{
